src/components/Tabs/Tabs.scss
@import '../variables';
@import '../../../styles/mixins';

#{$root} {
    --yc-tab-item-vertical-padding: 6px 20px;
    --yc-tab-item-vertical-height: 18px;
}

$block: '.#{$ns}tabs';

#{$block} {
    &_size {
        &_m {
            --yc-tabs-height: 36px;
            --yc-tabs-gap: 24px;
            --yc-tabs-border-width: 2px;

            #{$block}__item-title,
            #{$block}__item-counter {
                @include text-body-1();
            }
        }

        &_l {
            --yc-tabs-height: 40px;
            --yc-tabs-gap: 28px;
            --yc-tabs-border-width: 2px;

            #{$block}__item-title,
            #{$block}__item-counter {
                @include text-body-2();
            }
        }

        &_xl {
            --yc-tabs-height: 44px;
            --yc-tabs-gap: 32px;
            --yc-tabs-border-width: 3px;

            #{$block}__item-title,
            #{$block}__item-counter {
                @include text-subheader-3();
            }
        }
    }

    &_direction_horizontal {
        display: flex;
        align-items: flex-end;
        flex-wrap: wrap;
        box-shadow: inset 0 -1px 0 0 var(--yc-color-line-generic);
        overflow: hidden;

        #{$block}__item {
            box-sizing: border-box;
            display: flex;
            align-items: center;
            height: var(--yc-tabs-height);
            border-bottom: var(--yc-tabs-border-width) solid transparent;
            padding-top: var(--yc-tabs-border-width);
            cursor: pointer;
            user-select: none;
            outline: none;

            &:not(:last-child) {
                margin-right: var(--yc-tabs-gap);
            }

            &-meta {
                display: none;
            }

            &-title {
                color: var(--yc-color-text-secondary);
                white-space: nowrap;
            }

            &-icon,
            &-counter {
                color: var(--yc-color-text-hint);
            }

            &-icon {
                margin-right: 8px;
            }

            &-counter,
            &-label {
                margin-left: 8px;
            }

            &-icon > svg {
                display: block;
            }

            &_active,
            &:hover,
            &:focus {
                #{$block}__item-title {
                    color: var(--yc-color-text-primary);
                }

                #{$block}__item-icon,
                #{$block}__item-counter {
                    color: var(--yc-color-text-secondary);
                }
            }

            &_active,
            &_active:hover,
            &_active:focus {
                border-color: var(--yc-color-base-special);
            }

            &_disabled {
                pointer-events: none;

                #{$block}__item-title {
                    color: var(--yc-color-text-hint);
                }
            }
        }
    }

    &_direction_vertical {
        display: flex;
        flex-direction: column;

        #{$block}__item {
            padding: var(--yc-tab-item-vertical-padding);

            &-title {
                line-height: var(--yc-tab-item-vertical-height);
                color: var(--yc-color-text-primary);
            }

            &-meta {
                line-height: var(--yc-tab-item-vertical-height);
                color: var(--yc-color-text-secondary);
            }

            &_active {
                background-color: var(--yc-color-base-selection);
            }

            &_disabled {
                pointer-events: none;

                & #{$block}-item-title {
                    color: var(--yc-color-text-secondary);
                }
            }
        }
    }
}

